--- a/TP/TP_evolutiva.ipynb
+++ b/TP/TP_evolutiva.ipynb
@@ -682,7 +682,7 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "input_file = \"arquivo2.in\"\n",
+        "input_file = \"arquivo1.in\"\n",
         "run_experiments_from_file(input_file)\n"
       ],
       "metadata": {
@@ -690,7 +690,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BCw_XS9cV8wW",
-        "outputId": "de122bc3-128b-4d3e-d544-c13e8f0f35f7"
+        "outputId": "c7e9678f-dc64-4739-a7be-63be636017e4"
       },
       "execution_count": null,
       "outputs": [
@@ -698,29 +698,29 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Items: [(995, 100), (485, 482), (326, 257), (248, 286), (421, 517), (322, 404), (795, 713), (43, 45), (845, 924), (955, 873), (252, 160), (9, 1), (901, 838), (122, 40), (94, 58), (738, 676), (574, 627), (715, 766), (882, 862), (367, 405), (984, 923), (299, 379), (433, 461), (682, 612), (72, 133), (874, 813), (138, 97), (856, 908), (145, 165), (995, 996), (529, 623), (199, 220), (277, 298), (97, 157), (719, 723), (242, 144), (107, 48), (122, 129), (70, 148), (98, 35), (600, 644), (645, 632), (267, 272), (972, 1040), (895, 977), (213, 312), (748, 778), (487, 567), (923, 965), (29, 1), (674, 616), (540, 569), (554, 628), (467, 493), (46, 76), (710, 733), (553, 575), (191, 288), (724, 775), (730, 723), (988, 912), (90, 64), (340, 354), (549, 565), (196, 210), (865, 922), (678, 775), (570, 566), (936, 934), (722, 626), (651, 742), (123, 194), (431, 485), (508, 483), (585, 617), (853, 876), (642, 653), (992, 896), (725, 652), (286, 220), (812, 727), (859, 900), (663, 563), (88, 56), (179, 157), (187, 280), (619, 537), (261, 284), (846, 920), (192, 124), (261, 239), (514, 459), (886, 931), (530, 504), (849, 910), (294, 382), (799, 795), (391, 485), (330, 351), (298, 289), (790, 865)]\n",
-            "Capacidade: 1000\n",
-            "Instância do arquivo: 101 itens, Capacidade = 1000\n",
-            "GA: Média = 0.00, Desvio = 0.00, Melhor = 0.00\n",
-            "Memetic: Média = 0.00, Desvio = 0.00, Melhor = 0.00\n",
-            "Adaptive: Média = 0.00, Desvio = 0.00, Melhor = 0.00\n",
-            "Greedy: Valor = 1588\n"
+            "Items: [(92, 44), (4, 46), (43, 90), (83, 72), (84, 91), (68, 40), (92, 75), (82, 35), (6, 8), (44, 54), (32, 78), (18, 40), (56, 77), (83, 15), (25, 61), (96, 17), (70, 75), (48, 29), (14, 75), (58, 63)]\n",
+            "Capacidade: 878\n",
+            "Instância do arquivo: 20 itens, Capacidade = 878\n",
+            "GA: Média = 1024.00, Desvio = 0.00, Melhor = 1024.00\n",
+            "Memetic: Média = 1024.00, Desvio = 0.00, Melhor = 1024.00\n",
+            "Adaptive: Média = 1024.00, Desvio = 0.00, Melhor = 1024.00\n",
+            "Greedy: Valor = 1018\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{'FileInstance': {'File': {'GA': (np.float64(0.0),\n",
+              "{'FileInstance': {'File': {'GA': (np.float64(1024.0),\n",
               "    np.float64(0.0),\n",
-              "    np.float64(0.0)),\n",
-              "   'Memetic': (np.float64(0.0), np.float64(0.0), np.float64(0.0)),\n",
-              "   'Adaptive': (np.float64(0.0), np.float64(0.0), np.float64(0.0)),\n",
-              "   'Greedy': 1588}}}"
+              "    np.float64(1024.0)),\n",
+              "   'Memetic': (np.float64(1024.0), np.float64(0.0), np.float64(1024.0)),\n",
+              "   'Adaptive': (np.float64(1024.0), np.float64(0.0), np.float64(1024.0)),\n",
+              "   'Greedy': 1018}}}"
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 19
         }
       ]
     },
